fix tweet widths so they do not collapse weirdly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@ div#pause {
 }
 
 table.runningStats {
-    width: 85%;
+    width: 80%;
 }
 
 .runningStats th {
